partners slider top gap fixed

--- a/assets/scss/_forPartnerResponsive.scss
+++ b/assets/scss/_forPartnerResponsive.scss
@@ -80,8 +80,8 @@
             width: 100%;
             font-size: 18px;
             line-height: 32px;
-            margin: 70px auto;
             padding: 0 10px;
+            margin: 70px auto 60px;
         }
     }
 
