--- a/css/style.css
+++ b/css/style.css
@@ -5263,8 +5263,8 @@ footer {
     width: 100%;
     font-size: 18px;
     line-height: 32px;
-    margin: 70px auto;
-    padding: 0 10px; }
+    padding: 0 10px;
+    margin: 70px auto 60px; }
 
   .become-partner-section {
     width: 100%; }
